--- a/app/src/main/res/drawable/button_bg_round_up.xml
+++ b/app/src/main/res/drawable/button_bg_round_up.xml
@@ -97,9 +97,9 @@
 
     <item >
 
-        <ripple xmlns:android="http://schemas.android.com/apk/res/android"
+        <item xmlns:android="http://schemas.android.com/apk/res/android"
             android:color="@color/colorAccentDark">
-            <item android:id="@android:id/mask">
+            <item>
                 <shape android:shape="oval">
                     <solid android:color="@color/colorAccentDark" />
                 </shape>
@@ -109,7 +109,7 @@
                     <solid android:color="@color/colorAccent" />
                 </shape>
             </item>
-        </ripple>
+        </item>
 
     </item>
 
