--- a/app/src/main/res/drawable/button_bg_round_up.xml
+++ b/app/src/main/res/drawable/button_bg_round_up.xml
@@ -96,10 +96,10 @@
     </item>
 
     <item >
+        <layer-list>
 
-        <item xmlns:android="http://schemas.android.com/apk/res/android"
-            android:color="@color/colorAccentDark">
-            <item>
+        <item >
+
                 <shape android:shape="oval">
                     <solid android:color="@color/colorAccentDark" />
                 </shape>
@@ -109,9 +109,7 @@
                     <solid android:color="@color/colorAccent" />
                 </shape>
             </item>
-        </item>
+        </layer-list>
 
-    </item>
-
-
+    </item >
 </layer-list>
