--- a/app/src/main/res/layout/dialog_fragment_mensaje.xml
+++ b/app/src/main/res/layout/dialog_fragment_mensaje.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:customfont="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:theme="@style/AppTheme"
-    tools:context=".activities.PanicButtonActivity"
+    tools:context=".activities.LoginActivity"
     android:background="#f4f4f4">
     <LinearLayout
         android:focusable="true"
@@ -26,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             customfont:fontName="AvenirMedium.otf"
-            android:text="Intervalo de registro de imagenes"
+            android:text="Cambio de Mensaje de Emergencia"
             android:textColor="#00263e"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
         <LinearLayout
@@ -41,15 +40,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp">
-                <biz.kasual.materialnumberpicker.MaterialNumberPicker
+                <uneg.software.sebu.views.CustomFontEditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:drawableLeft="@android:drawable/ic_menu_edit"
+                    android:drawablePadding="15dp"
                     android:id="@+id/mensaje"
-                    app:npMinValue="5"
-                    app:npMaxValue="10"
-                    app:npSeparatorColor="@color/colorAccent"
-                    app:npTextColor="@color/colorPrimary"
-                    app:npTextSize="25sp"/>
+                    customfont:fontName="AvenirMedium.otf"
+                    android:hint="Mensaje"
+                    android:layout_marginRight="10dp"
+                    android:textSize="17dp"
+                    android:singleLine="true"
+                    android:textColor="#4b4b4b"
+                    android:textColorHint="#878787" />
             </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
@@ -73,7 +76,7 @@
                     android:textColor="#fffdfcf9"
 
                     customfont:fontName="AvenirMedium.otf"
-                    android:text="Cambiar intervalo"
+                    android:text="Cambiar Mensaje"
                     android:textAllCaps="false"
                     android:layout_gravity="bottom|center_horizontal"
                     android:orientation="horizontal"
