--- a/app/src/main/res/layout/item_telefono.xml
+++ b/app/src/main/res/layout/item_telefono.xml
@@ -2,42 +2,42 @@
 
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="328dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:customfont="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
-    android:layout_margin="10dp"
-    android:focusable="true"
+    android:layout_margin="15dp"
     card_view:cardCornerRadius="2dp"
     card_view:cardElevation="2dp"
     android:drawSelectorOnTop="true">
 
 
-    <LinearLayout
-        android:orientation="horizontal"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
+        android:padding="10dp"
+        android:measureWithLargestChild="true">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/eliminar_telefono"
+            android:src="@android:drawable/ic_delete"
+            android:layout_gravity="left|center_vertical"
+            android:adjustViewBounds="false" />
 
         <uneg.software.sebu.views.CustomFontTextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             customfont:fontName="AvenirMedium.otf"
             android:text="Telefono"
             android:id="@+id/telefono"
             android:textColor="#00263e"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-            android:layout_weight="1"
-            android:layout_gravity="center" />
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+            android:layout_gravity="left|center"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="10dp" />
 
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:id="@+id/eliminar_telefono"
-            android:src="@android:drawable/ic_delete"
-            android:layout_gravity="right|top" />
-
-    </LinearLayout>
+    </FrameLayout>
 
 </android.support.v7.widget.CardView>
