--- a/app/src/main/res/layout/activity_panic_button.xml
+++ b/app/src/main/res/layout/activity_panic_button.xml
@@ -15,44 +15,68 @@
         android:minHeight="?attr/actionBarSize"
         android:background="#00000000"
         android:visibility="visible">
+
         <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|right"
-            android:layout_marginRight="5dp"
-            android:paddingRight="10dp">
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-            <uneg.software.sebu.views.CustomFontTextView
+
+            <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                customfont:fontName="AvenirDemi.otf"
-                android:id="@+id/nombre"
-                android:text="Jhonny Barrios"
-                android:layout_gravity="center_vertical|right"
-                android:textColor="#ffffff"
-                android:textSize="12dp" />
-            <uneg.software.sebu.views.CustomFontTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                customfont:fontName="AvenirDemi.otf"
-                android:id="@+id/username"
-                android:text="jhonnyx"
-                android:textSize="10dp"
-                android:layout_gravity="center_vertical|right"
-                android:textColor="#d2d2d2" />
-            <uneg.software.sebu.views.CustomFontTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                customfont:fontName="AvenirDemi.otf"
-                android:id="@+id/nivel"
-                android:text="nivel"
-                android:textSize="10dp"
-                android:layout_gravity="center_vertical|right"
-                android:textColor="#d2d2d2" />
+                android:layout_height="60dp"
+                android:id="@+id/imageView"
+                android:layout_gravity="left|top"
+                android:src="@drawable/ic_sebu_logotipo"
+                android:adjustViewBounds="true"
+                android:layout_marginTop="10dp" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|right"
+                    android:layout_marginRight="5dp"
+                    android:paddingRight="10dp">
+
+                    <uneg.software.sebu.views.CustomFontTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        customfont:fontName="AvenirDemi.otf"
+                        android:id="@+id/nombre"
+                        android:text="Jhonny Barrios"
+                        android:layout_gravity="center_vertical|right"
+                        android:textColor="#ffffff"
+                        android:textSize="12dp" />
+                    <uneg.software.sebu.views.CustomFontTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        customfont:fontName="AvenirDemi.otf"
+                        android:id="@+id/username"
+                        android:text="jhonnyx"
+                        android:textSize="10dp"
+                        android:layout_gravity="center_vertical|right"
+                        android:textColor="#d2d2d2" />
+                    <uneg.software.sebu.views.CustomFontTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        customfont:fontName="AvenirDemi.otf"
+                        android:id="@+id/nivel"
+                        android:text="nivel"
+                        android:textSize="10dp"
+                        android:layout_gravity="center_vertical|right"
+                        android:textColor="#d2d2d2" />
+                </LinearLayout>
+            </FrameLayout>
+
         </LinearLayout>
-
     </android.support.v7.widget.Toolbar>
+
+
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -160,6 +184,7 @@
                 android:src="@drawable/password"/>
 
             </com.github.clans.fab.FloatingActionMenu>
+
     </FrameLayout>
 
 </FrameLayout>
