--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,7 @@
         <item name="windowNoTitle">true</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="android:navigationBarColor">@color/colorAccentDark</item>
         <item name="colorAccent">@android:color/white</item>
         <item name="android:windowAnimationStyle">@style/MyAnimation.Window</item>
     </style>
